# AI-Job-Recommender-System-using-OpenAI-Apify

./: .gitignore  README.md  pyproject.toml
src/: job_api.py
